# anycode

./: .dockerignore  .gitignore  README.md  anycode-demo.dockerfile  anycode.dockerfile  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
anycode/: App.css  App.tsx  README.md  constants.ts  index.css  index.html  main.js  package.json  storage.ts  types.ts  vite.config.js
anycode-backend/: Cargo.toml  package-lock.json  package.json  start.sh  tsconfig.json  welcome.js
anycode-backend-rust/: config.toml
anycode-backend-rust/src/: app_state.rs  code.rs  lsp.rs  main.rs  search.rs  terminal.rs  utils.rs
anycode-backend-rust/src/handlers/: io_handler.rs  lsp_handler.rs  mod.rs  search_handler.rs
anycode-backend/src/: app_state.rs  config.rs  index.ts  lsp.rs  main.rs  types.ts  utils.rs
anycode-backend/src/handlers/: io_handler.rs  lsp_handler.rs  mod.rs  terminal_handler.rs
anycode-base/src/: actions.ts  code.ts  cursor.ts  editor.ts  history.ts  index.ts  lsp.ts  mouse.ts  renderer.ts  search.ts  selection.ts  styles.css  theme.ts  utils.ts
anycode-base/src/langs/: html.js
anycode-react/src/: Component.tsx  index.ts
anycode/components/: DebugInfo.css  DebugInfo.tsx  TerminalComponent.css  TerminalComponent.tsx  TerminalTabs.css  TerminalTabs.tsx  TreeNodeComponent.css  TreeNodeComponent.tsx  index.ts
